# qgc-aurelia-planner

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/qgc_aurelia/: app.py
